Fix FF loading jumpiness

--- a/assets/styles/transitions.scss
+++ b/assets/styles/transitions.scss
@@ -1,5 +1,5 @@
 .t-container {
-  transition: all .225s cubic-bezier(.55,0,.1,1);
+  transition: all .25s cubic-bezier(.55,0,.1,1);
 }
 
 .t-slide-left-enter,
